# ampersand

./: .gitignore  LICENSE  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  test_ollama.py
.github/workflows/: test.yml
docs/: server-architecture.md
output/: tango.us_response.json  www.breadfast.com_text_scrapper_response.json
promts/: text_image_promt.md  text_promt.md  text_promt_breadfast.md
schema/: category_schema.json  main_schema.json
src/: __init__.py  apicall.py  errors.py  htrml_parser.py  main.py  models.py  ollama_scrapper.py  ollamacall.py  openai_scrrapper.py  responses.py  utils.py
src/ampersand/: __init__.py  backend_bridge.py  cli.py  config.py  converter.py  email_parser.py  extractor.py  feed.py  imap.py  log_setup.py  models.py  newsletter_filter.py  state.py  vault.py  youtube.py
src/amperstand/: __init__.py  backend_bridge.py  cli.py  config.py  log_setup.py  state.py  vault.py
tests/: test_converter.py  test_extractor.py
