[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ampersand"
version = "0.1.0"
description = "Open-source capture layer that turns anything from the web into markdown files you own."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "yt-dlp>=2024.1",
    "markdownify>=0.13",
    "pyyaml>=6.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
ampersand = "ampersand.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ampersand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
