[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The bare `amperstand` was taken by an unrelated
# minimalistic-static-site-generator (Nathan Scott's project, 7 releases).
# We claim `amperstand` instead — same general &-stand-for-capture
# connotation, distinct enough to avoid the wrong-package-installed
# friction Researcher hit in the 2026-06-09 friction test.
#
# Python module name stays `amperstand` for now (`import amperstand` in code
# is unchanged). If we ever do the deeper rename — directory rename, all
# imports updated — that's a separate, bigger commit. This is the
# minimum-viable PyPI release.
name = "amperstand"
version = "0.1.0"
description = "Open-source capture layer that turns anything from the web into markdown files you own."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "yt-dlp>=2024.1",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "playwright>=1.40",
    "amperstand-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
amperstand = "amperstand.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/amperstand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
